add more logic to planogram page
